changed hr length to 100% to prevent text wrap on larger screens

--- a/unit-11-club-ethos-right-content/assets/css/style.css
+++ b/unit-11-club-ethos-right-content/assets/css/style.css
@@ -146,7 +146,7 @@ nav a:hover {
 
 hr {
     border-top: 1px solid #cccccc;
-    width: 250px;
+    width: 100%;
     margin: 5px 0;
 }
 
